[gd_scene load_steps=5 format=3 uid="uid://dyri0qpradn8j"]

[ext_resource type="Script" uid="uid://b1u0entiqpxbu" path="res://scenes/projectiles/laser.gd" id="1_4q4pl"]
[ext_resource type="Texture2D" uid="uid://c2oysui77xbyv" path="res://resources/graphics/projectiles/blue.png" id="1_ddrl6"]
[ext_resource type="Texture2D" uid="uid://cl4balgdmbuiq" path="res://resources/graphics/lights/textures/circle.png" id="3_gba3i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4aetc"]
height = 98.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_4q4pl")
speed = 2000

[node name="Laser" type="CollisionShape2D" parent="."]
position = Vector2(33, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4aetc")
metadata/_edit_lock_ = true

[node name="Blue" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_ddrl6")
metadata/_edit_lock_ = true

[node name="SelfDestruct" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(74, 0)
energy = 0.5
texture = ExtResource("3_gba3i")
texture_scale = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_timer_timeout"]
